# aapp-homework

./: .gitignore  README.md
alignment/: alignment.c  alignment.h  makefile  max_cost.c
smiles/: .clang-format  CMakeLists.txt  README.md  perf.ods
smiles/data/: molecules.smi
smiles/scripts/: from_csv.sh  launch.sh
smiles/src/: main.cpp  mpi_error_check.cpp  mpi_error_check.hpp
